# kb-assistance-backend-public

./: .gitignore  README.md  chatbot.py  chatbot_evaluation.py  ingest.py  main.py  pyproject.toml  qa_evaluation_dataset.json  response_results.csv  retrieve_results.csv  retriever.py  retriever_evaluation.py  utils.py
documents/: 0.md  1.md  2.md  3.md
